clang/test/BSC/Negative/Ownership/Borrow/borrow_op/borrow_op.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

struct R {
   int num;
};

int f() { return 2; }
int test() {
  int arr[3] = {1, 2, 3};
  int * _Borrow p1 = &_Mut arr[0];
  // unary *
  *p1 += 1; // legal

  // == ！= > < <= >=
  int a = 1;
  float b = 1.0;
  int * p2 = &a;
  int *_Borrow  p3 = &_Mut a;
  int *_Borrow  p4 = &_Mut a;
  const int *_Borrow p5 = &_Const a;
  const int *_Borrow p6 = &_Const a;
  float *_Borrow p7 = &_Mut b;
  if (p3 == p4) {} // legal
  if (p5 != p6) {} // legal
  if (p3 == p5) {} // expected-error {{incompatible _Borrow types, 'const int *_Borrow' and 'int *_Borrow' cannot be compared}}
  if (p3 == p7) {} // expected-error {{incompatible _Borrow types, 'float *_Borrow' and 'int *_Borrow' cannot be compared}}
  if (p3 >= &_Mut a) {} // legal
  if (p5 < &a) {} // expected-error {{incompatible _Borrow types, 'int *' and 'const int *_Borrow' cannot be compared}}

  if (sizeof(int * _Borrow) != sizeof(int *)) { return 1; }
  if (_Alignof(int * _Borrow) != _Alignof(int *)) { return 1; }

  int (* _Borrow p8)() = &_Mut f; // expected-error {{type of 'int (*)(void)' cannot be qualified by '_Borrow'}}
                                  // expected-error@-1 {{'&_Mut' for function pointer is not allowed}}
  int (* const _Borrow p9)() = &_Const f; // expected-error {{type of 'int (*)(void)' cannot be qualified by '_Borrow'}}
                                  // expected-error@-1 {{'&_Const' for function pointer is not allowed}}
  a = p9();

  // ! && ||
  _Bool b1 = !p1;
  _Bool b2 = !p3;
  b1 = !p2 && p3 || p5;
  b1 = p4 || p5;
  b1 = p4 && p5;

  // ->
  struct R r = { .num = 1 };
  struct R * _Borrow p10 = &_Mut r;
  a = p10->num;

  // unsupport
  p1[1] += 1; // expected-error {{subscript of _Borrow pointer is not allowed}}
  -p3; // expected-error {{invalid argument type 'int *_Borrow' to unary expression}}
  -p5; // expected-error {{invalid argument type 'const int *_Borrow' to unary expression}}
  p3 * p4; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'int *_Borrow')}}
  p3 / p4; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'int *_Borrow')}}
  p5 % p6; // expected-error {{invalid operands to binary expression ('const int *_Borrow' and 'const int *_Borrow')}}
  p5 & p6; // expected-error {{invalid operands to binary expression ('const int *_Borrow' and 'const int *_Borrow')}}
  p3 | p4; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'int *_Borrow')}}
  ~p3; // expected-error {{invalid argument type 'int *_Borrow' to unary expression}}
  ~p5; // expected-error {{invalid argument type 'const int *_Borrow' to unary expression}}
  p5 << 6; // expected-error {{invalid operands to binary expression ('const int *_Borrow' and 'int')}}
  p3 >> p4; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'int *_Borrow')}}
  &_Mut p3; // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
           // expected-warning@-1 {{expression result unused}}
  &_Mut p5; // expected-error {{'&_Mut' on a '_Borrow' qualified type is not allowed}}
           // expected-warning@-1 {{expression result unused}}
  &_Const p3; // expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
             // expected-warning@-1 {{expression result unused}}
  &_Const p5; // expected-error {{'&_Const' on a '_Borrow' qualified type is not allowed}}
             // expected-warning@-1 {{expression result unused}}

  // unary -- ++
  p3++; // expected-error {{invalid argument type 'int *_Borrow' to unary expression}}
  --p3; // expected-error {{invalid argument type 'int *_Borrow' to unary expression}}
  p5--; // expected-error {{invalid argument type 'const int *_Borrow' to unary expression}}
  ++p5; // expected-error {{invalid argument type 'const int *_Borrow' to unary expression}}

  // binary - +
  a = *p3 + *p5;
  p3 + p5; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'const int *_Borrow')}}
  p3 = p3 + 1; // expected-error {{invalid operands to binary expression ('int *_Borrow' and 'int')}}
  p5 = p5 - 1; // expected-error {{nvalid operands to binary expression ('const int *_Borrow' and 'int')}}
  return 0;
}
